@@ -1,5 +1,5 @@
-#!QUESTMAKER_START_SCRIPT Normal Capture #2
-#An existing mob in your world needs one or more other mobs that you create captured. 
+#!QUESTMAKER_START_SCRIPT Normal Killer #2
+#An existing mob in your world needs one or more mobs which you will create killed. 
 #A reward is given upon completion of the task and returning to the announcer.
 #
 #!QUESTMAKER_PAGE Quest Name/Criteria
@@ -7,11 +7,11 @@
 #
 #Quest ID:
 #Enter a unique name/id for your quest:
-#$QUEST_ID=$UNIQUE_QUEST_NAME=normal_capture_1
+#$QUEST_ID=$UNIQUE_QUEST_NAME=normal_killer_2
 #
 #Quest Name:
 #Enter a friendly displayable name for your quest:
-#$QUEST_NAME=$STRING=Normal Capture #2
+#$QUEST_NAME=$STRING=Normal Killer #2
 #
 #Quest-Player Criterium:
 #You may leave this entry blank, or enter a Zapper Mask to describe what
@@ -20,7 +20,7 @@
 #$QUEST_CRITERIA=$ZAPPERMASK
 #
 #!QUESTMAKER_PAGE Specify the Announcer
-#The Announcer is the mob who will be wanting the other mobs captured. This must
+#The Announcer is the mob who will be wanting the other mobs killed. This must
 #be an existing mob in your world.  
 #
 #Announcer Area/Room: 
@@ -51,75 +51,60 @@
 #
 #Announcer Notification: 
 #Specify some additional bit of speech the announcer mob will say to players when they enter the room.
-#$QUEST_NOTIFYSTRING=($LONG_STRING)=I have some things I need captured!  Are you game?
+#$QUEST_NOTIFYSTRING=($LONG_STRING)=I have someones I need killed!  Are you game?
 #
 #Announcer Instructions: 
 #Specify some additional bit of speech the announcer mob will say to players when the quest is accepted.
-#$QUEST_INSTRUCTIONSSTRING=($LONG_STRING)=I need you to capture some folks.  They are somewhere around somewhere.  You might have to get rough with them.
+#$QUEST_INSTRUCTIONSSTRING=($LONG_STRING)=I need you to kill some folks.  They are somewhere around somewhere.  Just beat them senseless.
 #
 #Announcer Extra Announcement: 
 #Leave blank, or specify a channel that the announcer will also give his notification on.
 #$QUEST_ANNOUNCECHANNEL=($STRING)=
 #
 #Announcer success:
-#This is what the announcement says when the player returns with all the capturable mobs.
-#$QUEST_WINSPEECH_TEXT=($LONG_STRING)=Congratulations! You got them!
+#This is what the announcement says when the player returns after finishing the quest.
+#$QUEST_WINSPEECH_TEXT=($LONG_STRING)=Congratulations! They're dead!
 #
-#!QUESTMAKER_PAGE Specify the Captureable Mob or Mobs
-#The Capturables are the mob or mobs which must be defeated.
+#!QUESTMAKER_PAGE Specify the Killable Mob or Mobs
+#The Killables are the mob or mobs which must be defeated.
 #
-#Captureables Rooms: 
+#Killables Rooms: 
 #Specify the rooms that your mobs will possibly be found in.
 #Use double-quotes around multi-word areas and room ids/names.
 #Use the keyword ANY to specify a single random area or room, or
 #the keyword ALL to specify ALL areas or rooms.
 #
-#Captureables Area:
-#$CAPTUREABLES_AREAS=($AREA)
-#Captureables Rooms:
-#$CAPTUREABLES_ROOMS=($ROOMID)
+#Killables Area:
+#$KILLABLES_AREAS=($AREA)
+#Killables Rooms:
+#$KILLABLES_ROOMS=($ROOMID)
+
+#Killable mobs: 
+#Specify below the mobs that the player must kill to get credit for this quest.
+#$KILLABLES_MOBS=$MOBXML_ONEORMORE
 #
-#Capturables mobs: 
-#Specify below the mobs that the player must capture to get credit for this quest.
-#$CAPTUREABLES_MOBS=$MOBXML_ONEORMORE
-#
-#Num Capturables:
-#Specify how many of the capturable mobs must be captured.  Make sure there are 
-#enough of them in your world to make this goal reachable!
-#$NUM_CAPTURABLES=($EXPRESSION)=1
-#
-#Captureables chance:
-#Specify the percent chance that a mob will be found in a particular room.
-#$CAPTUREABLES_CHANCE=($EXPRESSION)=10
-#
-#Capturables response: 
-#You may optionally specify some additional bit of speech the capturables 
-#mobs will say to the players when they enter the room with them. 
-#$CAPTURABLES_RESPONSE=($STRING)=So, you've come for me.  Come and get me.
-#
-#!QUESTMAKER_PAGE Capturables Behavior
-#Select some details about the capturable mobs
-#
-#Capturables follow: 
-#Set this to PEACEFUL if the capturable mobs will follow the player who discovers
-#them, and VIOLENT if the capturable mobs must be defeated in combat first.
-#$CAPTURABLES_FOLLOW=$CHOOSE=VIOLENT,PEACEFUL
-#
-#Capturables attack:
+#Killables attack:
 #Will the mobs attack if they spot the player?  Keep in mind this is above and
 #beyond any aggressive behaviors they may have, and will neither modify or 
-#supress their natural aggressive behaviors.  Obviously attacking makes no
-#sense if they surrender peacefully, but requiring a violent capture doesn't
-#necessarily mean the mobs start the fight either.
-#$CAPTURABLES_ATTACK=$CHOOSE=NO-USE-DEFAULT_BEHAVIOR,YES-ATTACK-ON-SIGHT
+#supress their natural aggressive behaviors.
+#$KILLABLES_ATTACK=$CHOOSE=NO-USE-DEFAULT_BEHAVIOR,YES-ATTACK-ON-SIGHT
 #
-#Capturables surrender: 
-#You may optionally specify some additional bit of speech the capturables 
-#mobs will say to the players when they are defeated in combat.
-#$CAPTURABLES_SURRENDER=($STRING)=I surrender
+#Num Killables:
+#Specify how many of the killable mobs must be killed.  Make sure there are 
+#enough of them in your world to make this goal reachable!
+#$NUM_KILLABLES=($EXPRESSION)=1
+#
+#Killables chance:
+#Specify the percent chance that a mob will be found in a particular room.
+#$KILLABLES_CHANCE=($EXPRESSION)=10
+#
+#Killables response: 
+#You may optionally specify some additional bit of speech the killables 
+#mobs will say to the players when they enter the room with them. 
+#$KILLABLES_RESPONSE=($STRING)=So, you've come for me.  Come and get me.
 #
 #!QUESTMAKER_PAGE Quest Completion
-#Select some rewards for capturing the mobs:
+#Select some rewards for killing the mobs:
 #
 #Reward items: 
 #Specify zero or more items to choose from as a reward 
@@ -141,7 +126,7 @@
 #Select whether a player may complete this quest multiple times:
 #$MULTIPLE=$CHOOSE=YES,NO
 #
-#!QUESTMAKER_END_SCRIPT Normal Capture #2
+#!QUESTMAKER_END_SCRIPT Normal Killer #1
 
 set name $QUEST_ID
 set display $QUEST_NAME
@@ -159,15 +144,14 @@ give stat keyplayer true
 give script LOAD=$QUEST_ID_announcer.script
 
 set room
-set area $CAPTUREABLES_AREAS
-set roomgroup $CAPTUREABLES_ROOMS
-
+set area $KILLABLES_AREAS
+set roomgroup $KILLABLES_ROOMS
 
 set duration 0
 
 <?xml version="1.0"?>
 <FILE><NAME>$QUEST_ID_rewarditems.xml</NAME><DATA><ITEMS>$REWARD_ITEMS</ITEMS></DATA></FILE>
-<FILE><NAME>$QUEST_ID_mobs.xml</NAME><DATA><MOBS>$CAPTUREABLES_MOBS</MOBS></DATA></FILE>
+<FILE><NAME>$QUEST_ID_mobs.xml</NAME><DATA><MOBS>$KILLABLES_MOBS</MOBS></DATA></FILE>
 <FILE><NAME>$QUEST_ID_announcer.script</NAME>
 <DATA>
 ONCE_PROG 100
@@ -178,6 +162,30 @@ ONCE_PROG 100
 
 ALL_GREET_PROG 100
 	IF QUESTSCRIPTED($n *)
+		if var($n $QUEST_ID_KILLED >= $NUM_KILLABLES)
+			if EVAL('$EXP' != '')
+				mpexp $n $EXP
+			endif
+			if EVAL('$FACTION' != '')
+				mpfaction $n $FACTION $NUMFACTION
+			endif
+			if EVAL('$QUEST_POINT' == 'YES') AND !QUESTWINNER($n *)
+				mpoload QuestPoint
+				give "a quest point" "$n"
+			endif
+			if EVAL('$GOLD' != '') AND EVAL('$GOLD' > 0)
+				mpoload $GOLD
+				give $GOLD "$n"
+			endif
+			mpoload fromfile $QUEST_ID_rewarditems.xml any
+			if EVAL('$b' != '')
+				give "$b" "$n"
+			endif
+			mpquestwin $n *
+			sayto $n $QUEST_WINSPEECH_TEXT
+			mpendquest $n
+			mpqset * STATISTICS SUCCESS
+		endif
 	else
 		if ISLIKE($n '$QUEST_CRITERIA') and ISPC($n) and !QUESTSCRIPTED($n *)
 			if EVAL('$MULTIPLE' == 'YES') OR !QUESTWINNER($n *)
@@ -190,8 +198,8 @@ ALL_GREET_PROG 100
 SPEECH_PROG p i accept $QUEST_NAME
 	if ISLIKE($n '$QUEST_CRITERIA') and ISPC($n) and !QUESTSCRIPTED($n *)
 		if  EVAL('$MULTIPLE' == 'YES') OR !QUESTWINNER($n *)
-			sayto "$n" $QUEST_INSTRUCTIONSSTRING
 			mpqset * STATISTICS ACCEPTED
+			sayto "$n" $QUEST_INSTRUCTIONSSTRING
 			mpscript $n INDIVIDUAL SAVABLE STATIC=LOAD=$QUEST_ID_playertrack.script
 		endif
 	endif
@@ -200,8 +208,8 @@ SPEECH_PROG p i accept $QUEST_NAME
 SPEECH_PROG p i accept
 	if ISLIKE($n '$QUEST_CRITERIA') and ISPC($n) and !QUESTSCRIPTED($n *)
 		if  EVAL('$MULTIPLE' == 'YES') OR !QUESTWINNER($n *)
-			sayto "$n" $QUEST_INSTRUCTIONSSTRING
 			mpqset * STATISTICS ACCEPTED
+			sayto "$n" $QUEST_INSTRUCTIONSSTRING
 			mpscript $n INDIVIDUAL SAVABLE STATIC=LOAD=$QUEST_ID_playertrack.script
 		endif
 	endif
@@ -211,21 +219,9 @@ SPEECH_PROG p i accept
 <DATA>
 ONCE_PROG 100
 	mpsetvar $i INSTRUCTIONS $QUEST_INSTRUCTIONSSTRING
-	if var($i $QUEST_ID_CAPTURED = '')
-		mpsetvar $i $QUEST_ID_CAPTURED 0
-	endif
-	if var($i $QUEST_ID_RETURNED = '')
-		mpsetvar $i $QUEST_ID_RETURNED 0
-	endif
 	IF !isquestmobalive(1 '$QUEST_ID')
 		MPENDQUEST '$QUEST_ID'
 	ENDIF
-	mpsetvar $i PROGRESS Found: $<$i $QUEST_ID_CAPTURED>, Returned: $<$i $QUEST_ID_RETURNED>/$NUM_CAPTURABLES
-    if QVAR(* REMAINING == '')
-        MPENDQUEST $i
-    else
-        mpsetvar $i TIME_REMAINING $%QVAR(* REMAINING)%
-    endif
 ~
 
 RAND_PROG 25
@@ -250,18 +246,10 @@ QUEST_TIME_PROG * 1
 
 GREET_PROG 100
 	if QUESTMOB($n *) AND !ISFOLLOW('$n') AND CANSEE($n $i) AND EVAL('${1 *}' != $n)
-		if EVAL('$CAPTURABLES_ATTACK' == 'YES-ATTACK-ON-SIGHT')
+		if EVAL('$KILLABLES_ATTACK' == 'YES-ATTACK-ON-SIGHT')
 			mpforce $n kill $i
-		else
-			if EVAL('$CAPTURABLES_FOLLOW' == 'PEACEFUL')
-				mpforce $n sayto "$i" $CAPTURABLES_SURRENDER
-				mpforce $n mpstop all
-				mpforce $n follow "$i"
-			endif
-		endif
 	endif
 ~
-
 FUNCTION_PROG DEL_LAST_MOB
 	IF !ISFOLLOW('$<$i $QUEST_ID_LASTMOB>') AND QUESTMOB('$<$i $QUEST_ID_LASTMOB>' *)
 		mppurge room '$<$i $QUEST_ID_LASTMOB>'
@@ -276,9 +264,9 @@ CNCLMSG_PROG ENTER ALL
 			mpsetvar $i $QUEST_ID_LASTMOB
 			mpsetvar $i $QUEST_ID_LASTROOM
 		endif
-		if QUESTROOM($g *)  or ( EVAL('$CAPTUREABLES_ROOMS' == 'ALL') AND QUESTAREA('$%INAREA($t)%' *) )
+		if QUESTROOM($g *)  or ( EVAL('$KILLABLES_ROOMS' == 'ALL') AND QUESTAREA('$%INAREA($t)%' *) )
 			if !STRIN('$<$i $QUEST_ID_ROOMLIST>' $g)
-				if rand($CAPTUREABLES_CHANCE) 
+				if rand($KILLABLES_CHANCE) 
 					mpat '$g' mpmload fromfile $QUEST_ID_mobs.xml any
 					MPGSET $b REJUV 0
 					MPQSET * QUESTOBJ $b
@@ -294,77 +282,25 @@ CNCLMSG_PROG ENTER ALL
 
 ENTRY_PROG 100
 	if INROOM($i == $g)
-		if INROOM($i == '${1 *}')
-			mpargset $9 '${1 *}'
-			for $0 = '$%NUMMOBSROOM(*)%' to 1
-				mpargset $1 '$%ROOMMOB($0)%'
-				if QUESTMOB($1 *) AND ISFOLLOW('$1')
-					mpsetvar $i $QUEST_ID_RETURNED ++
-					mpsetvar $i PROGRESS Found $<$i $QUEST_ID_CAPTURED>, Returned $<$i $QUEST_ID_RETURNED>/$NUM_CAPTURABLES
-					mpechoat $i You've brought in $<$i $QUEST_ID_RETURNED>/$NUM_CAPTURABLES
-					mpforce $1 follow self
-					mppurge $1
+		for $0 = 1 to '$%NUMMOBSROOM(*)%'
+			mpargset $1 '$%ROOMMOB($0)%'
+			if QUESTMOB($1 *) AND !ISFOLLOW($1) AND EVAL('${1 *}' != $1)
+				mpforce $1 sayto "$i" $KILLABLES_RESPONSE
+				if EVAL('$CAPTURABLES_ATTACK' == 'YES-ATTACK-ON-SIGHT')
+					mpforce $1 kill $i
 				endif
-			next
-			if var($i $QUEST_ID_RETURNED >= $NUM_CAPTURABLES)
-				if EVAL('$EXP' != '')
-					mpexp $i $EXP
-				endif
-				if EVAL('$FACTION' != '')
-					mpfaction $i $FACTION $NUMFACTION
-				endif
-				if EVAL('$QUEST_POINT' == 'YES') AND !QUESTWINNER($i *)
-					mpforce $9 mpoload QuestPoint
-					mpforce $9 give "a quest point" "$i"
-				endif
-				if EVAL('$GOLD' != '') AND EVAL('$GOLD' > 0)
-					mpforce $9 mpoload $GOLD
-					mpforce $9 give $GOLD "$i"
-				endif
-				mpforce $9 mpoload fromfile $QUEST_ID_rewarditems.xml any
-				if EVAL('$b' != '')
-					mpforce $9 give "$b" "$n"
-				endif
-				mpquestwin $i *
-				mpforce $9 sayto $i $QUEST_WINSPEECH_TEXT
-				mpendquest $i
-				mpqset * STATISTICS SUCCESS
-			ENDIF
-		else
-			for $0 = 1 to '$%NUMMOBSROOM(*)%'
-				mpargset $1 '$%ROOMMOB($0)%'
-				if QUESTMOB($1 *) AND !ISFOLLOW($1) AND EVAL('${1 *}' != $1)
-					mpforce $1 sayto "$i" $CAPTURABLES_RESPONSE
-					if EVAL('$CAPTURABLES_ATTACK' == 'YES-ATTACK-ON-SIGHT')
-						mpforce $1 kill $i
-					else
-						if EVAL('$CAPTURABLES_FOLLOW' == 'PEACEFUL')
-							mpforce $1 sayto "$i" $CAPTURABLES_SURRENDER
-							mpforce $1 mpstop all
-							mpforce $1 follow "$i"
-							mpsetvar $i $QUEST_ID_CAPTURED ++
-							mpsetvar $i PROGRESS Found $<$i $QUEST_ID_CAPTURED>, Returned $<$i $QUEST_ID_RETURNED>/$NUM_CAPTURABLES
-						endif
-					endif
-				endif
-			next
-		endif
+			endif
+		next
 	endif
 ~
-
-CNCLMSG_PROG STO=DEATH ALL
+	
+EXECMSG_PROG STO=DEATH ALL
 	if QUESTMOB($n *) AND !ISFOLLOW($n) AND EVAL('${1 *}' != $n)
-		mpargset $9 '$%ISFIGHT($n)%'
-		if EVAL($9 == $i)
-			mpgset $n HITS 1
-			mpforce $n mpstop all
-			mpstop all
-			mpforce $n sayto "$i" $CAPTURABLES_SURRENDER
-			mpforce $n follow "$i"
-			mpsetvar $i $QUEST_ID_CAPTURED ++
-			mpsetvar $i PROGRESS Found $<$i $QUEST_ID_CAPTURED>, Returned $<$i $QUEST_ID_RETURNED>/$NUM_CAPTURABLES
-			RETURN CANCEL
+		mpsetvar $i $QUEST_ID_KILLED ++;
+		if EVAL($NUM_KILLABLES > 1)
+			mpechoat $i Killed $<$i $QUEST_ID_KILLED>/$NUM_KILLABLES
 		endif
+		mpsetvar $i PROGRESS Killed $<$i $QUEST_ID_KILLED>/$NUM_KILLABLES
 	endif
 ~
 </DATA></FILE>
